force-app/main/default/objects/FEC_integration_service_log__c/FEC_integration_service_log__c.object-meta.xml
<CustomObject>
    <label>FEC integration service log</label>
    <nameField>
        <label>FEC integration service log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC integration service logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>