force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Bix_Is_Success__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bix_Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bix Is Success</label>
    <type>Checkbox</type>
</CustomField>