force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Custom_Sync__c.field-meta.xml
<CustomField>
    <fullName>FEC_Custom_Sync__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Sync</label>
    <referenceTo>FEC_Custom_Sync__c</referenceTo>
    <relationshipLabel>FEC integration service logs</relationshipLabel>
    <relationshipName>FEC_integration_service_logs</relationshipName>
    <type>Lookup</type>
</CustomField>