force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>