force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>