force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Integration_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Integration_Case_Id__c</fullName>
    <label>Integration Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>