force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Message_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Message_Status__c</fullName>
    <label>Message Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>