force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Method__c.field-meta.xml
<CustomField>
    <fullName>FEC_Method__c</fullName>
    <label>Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>