force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Requestor__c.field-meta.xml
<CustomField>
    <fullName>FEC_Requestor__c</fullName>
    <label>Requestor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>