force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Response_Data__c.field-meta.xml
<CustomField>
    <fullName>FEC_Response_Data__c</fullName>
    <label>Response data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>