force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Service_Name__c</fullName>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>