force-app/main/default/objects/FEC_integration_service_log__c/fields/FEC_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status_Code__c</fullName>
    <label>Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>